Added Bootstrap to the water delivery follow up project

--- a/web_dev/personal_projects/water_deliveries_followup/css/style.css
+++ b/web_dev/personal_projects/water_deliveries_followup/css/style.css
@@ -1,3 +1,17 @@
-td {
-    background-color: blue;
+body{
+    background-color: black;
+    font-size: 15em;
 }
+table {
+    table-layout: fixed;
+    text-align: center;
+    color: white;
+}
+
+th,
+td {
+    border: 1px solid white;
+    padding: 35px;
+}
+
+
